[gd_scene load_steps=3 format=3 uid="uid://dq86htxc5qp7n"]

[ext_resource type="Script" path="res://Scripts/GUI/modes_ui.gd" id="1_uugdi"]
[ext_resource type="Texture2D" uid="uid://bol2cnilxxtjw" path="res://Assets/background_image.png" id="2_svmpb"]

[node name="modes_ui" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uugdi")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2029.68
offset_bottom = 1100.0
texture = ExtResource("2_svmpb")
expand_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="history_mode" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/history_mode"]
layout_mode = 2

[node name="HistoryButton" type="Button" parent="CenterContainer/HBoxContainer/history_mode"]
layout_mode = 2
text = "History Mode"

[node name="infinite_mode" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/infinite_mode"]
layout_mode = 2

[node name="InfiniteButton" type="Button" parent="CenterContainer/HBoxContainer/infinite_mode"]
layout_mode = 2
text = "Infinite Mode"

[node name="BackButton" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/HBoxContainer/history_mode/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/infinite_mode/InfiniteButton" to="." method="_on_infinite_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
